Fixed header padding to avoid caption overlap (#3400)

--- a/WebContent/VAADIN/themes/runo/window/window.scss
+++ b/WebContent/VAADIN/themes/runo/window/window.scss
@@ -13,7 +13,7 @@
 .#{$primaryStyleName}-outerheader {
 	height: 49px;
 	margin-left: 9px;
-	padding: 15px 40px 11px 12px;
+	padding: 15px 61px 11px 12px;
 	background: transparent url(img/top-right.png) no-repeat right top;
 }
 .#{$primaryStyleName}-header {
